force-app/main/default/objects/OrderItemSummary/fields/COMM_Barcode__c.field-meta.xml
<CustomField>
    <fullName>COMM_Barcode__c</fullName>
    <description>Barcode value received from CPMS</description>
    <label>Barcode value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>