force-app/main/default/objects/OrderItemSummary/fields/COMM_BarcodeType__c.field-meta.xml
<CustomField>
    <fullName>COMM_BarcodeType__c</fullName>
    <description>Barcode type received from CPMS</description>
    <label>Barcode type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>