force-app/main/default/objects/OrderItemSummary/fields/COMM_BundleLineId__c.field-meta.xml
<CustomField>
    <fullName>COMM_BundleLineId__c</fullName>
    <description>Field to store Bundle line items order.</description>
    <label>Bundle Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>