force-app/main/default/objects/OrderItemSummary/fields/COMM_CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_CancellationDate__c</fullName>
    <description>Order Product Cancellation Date</description>
    <label>Cancellation Date</label>
    <type>DateTime</type>
</CustomField>