force-app/main/default/objects/OrderItemSummary/fields/COMM_CPMSLastLog__c.field-meta.xml
<CustomField>
    <fullName>COMM_CPMSLastLog__c</fullName>
    <description>Last log received when tried to communicate with CPMS this line</description>
    <label>CPMS Communication Last Log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>