force-app/main/default/objects/OrderItemSummary/fields/COMM_CPMSStatus__c.field-meta.xml
<CustomField>
    <fullName>COMM_CPMSStatus__c</fullName>
    <description>Communication with CPMS Status</description>
    <label>CPMS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_CPMSStatus</valueSetName>
    </valueSet>
</CustomField>