force-app/main/default/objects/OrderItemSummary/fields/COMM_CrossSell__c.field-meta.xml
<CustomField>
    <fullName>COMM_CrossSell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this product was bought from a cross-sell suggestion</description>
    <label>Cross-Sell</label>
    <type>Checkbox</type>
</CustomField>