force-app/main/default/objects/OrderItemSummary/fields/COMM_Discount__c.field-meta.xml
<CustomField>
    <fullName>COMM_Discount__c</fullName>
    <description>Contains discount reference</description>
    <label>Discount</label>
    <type>TextArea</type>
</CustomField>