force-app/main/default/objects/OrderItemSummary/fields/COMM_LicensePlate__c.field-meta.xml
<CustomField>
    <fullName>COMM_LicensePlate__c</fullName>
    <description>License plate to communicate with CPMS</description>
    <label>Reservation License Plate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>