force-app/main/default/objects/OrderItemSummary/fields/COMM_OrderItemReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_OrderItemReferenceNumber__c</fullName>
    <description>Field to store Product External Reference</description>
    <label>Order Product Reference Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>