force-app/main/default/objects/OrderItemSummary/fields/COMM_QRCode__c.field-meta.xml
<CustomField>
    <fullName>COMM_QRCode__c</fullName>
    <description>Used to store the string that will be used to generate the reservation QR Code</description>
    <label>QR Code</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>