force-app/main/default/objects/OrderItemSummary/fields/COMM_QRCodeImage__c.field-meta.xml
<CustomField>
    <fullName>COMM_QRCodeImage__c</fullName>
    <label>QR Code Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>