force-app/main/default/objects/OrderItemSummary/fields/COMM_ReservationActualEnd__c.field-meta.xml
<CustomField>
    <fullName>COMM_ReservationActualEnd__c</fullName>
    <description>Used for bidirectional communication with CPMS</description>
    <label>Reservation Actual End Date</label>
    <type>DateTime</type>
</CustomField>