force-app/main/default/objects/OrderItemSummary/fields/COMM_ReservationActualStart__c.field-meta.xml
<CustomField>
    <fullName>COMM_ReservationActualStart__c</fullName>
    <description>Used for bidirectional communication with CPMS</description>
    <label>Reservation Actual Start Date</label>
    <type>DateTime</type>
</CustomField>