force-app/main/default/objects/OrderItemSummary/fields/COMM_ReservationEnd__c.field-meta.xml
<CustomField>
    <fullName>COMM_ReservationEnd__c</fullName>
    <description>Used for stock reservation (end date time)</description>
    <label>Reservation End Date</label>
    <type>DateTime</type>
</CustomField>