force-app/main/default/objects/OrderItemSummary/fields/COMM_ReservationIdCPMS__c.field-meta.xml
<CustomField>
    <fullName>COMM_ReservationIdCPMS__c</fullName>
    <description>Used for bidirectional communication with CPMS</description>
    <externalId>true</externalId>
    <label>CPMS Reservation Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>