force-app/main/default/objects/OrderItemSummary/fields/COMM_ReservationStart__c.field-meta.xml
<CustomField>
    <fullName>COMM_ReservationStart__c</fullName>
    <description>Used for stock reservation (start date time)</description>
    <label>Reservation Start Date</label>
    <type>DateTime</type>
</CustomField>