force-app/main/default/objects/OrderItemSummary/fields/COMM_SetupInitialStock__c.field-meta.xml
<CustomField>
    <fullName>COMM_SetupInitialStock__c</fullName>
    <description>Indicate if the Order Item Summary should be considered by the initial stock reservation (COMM_Async_OrdItemSumOCICreateStock)</description>
    <label>Setup Initial Stock</label>
    <length>255</length>
    <type>Text</type>
</CustomField>