force-app/main/default/objects/OrderItemSummary/fields/COMM_SubscriptionNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubscriptionNumber__c</fullName>
    <description>Number of the Subscription</description>
    <label>Subscription Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>