force-app/main/default/objects/OrderItemSummary/fields/COMM_TimeZoneByAirport__c.field-meta.xml
<CustomField>
    <fullName>COMM_TimeZoneByAirport__c</fullName>
    <description>Formula field used to discover related product Timezone based on the Airport.</description>
    <formula>Product2.COMM_TimeZoneByAirport__c</formula>
    <label>Time Zone by Airport</label>
    <type>Text</type>
</CustomField>