force-app/main/default/objects/OrderItemSummary/fields/COMM_UpSell__c.field-meta.xml
<CustomField>
    <fullName>COMM_UpSell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this product was bought from an upsell suggestion</description>
    <label>Upsell</label>
    <type>Checkbox</type>
</CustomField>